Added some more slides

--- a/config.json
+++ b/config.json
@@ -22,6 +22,10 @@
   "slides": [
     "intro",
     "agenda",
+    "typescript",
+    "tools",
+    "compatibility",
+    "alternatives",
     "end"
   ]
 }
